[package]
name = "xmlman"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "An elegant XML-to-Rhai transpiler for Ewwii."

[dependencies]
ariadne = "0.5.1"
clap = { version = "4.5.46", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.27"
rhai = { version = "1.22.2", features = ["internals"] }
xml = "1.0.0"
xmlparser = "0.13.6"
